# clinical-ai-governance-platform

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: synthetic_patients.json
docs/: architecture.md  scale.md
docs/adr/: 001-mcp-over-direct-api.md  002-sqlite-over-json.md  003-agent-sdk-orchestration.md  004-chromadb-to-pgvector-path.md
evals/: demo_structured.py  golden_dataset.json  judge_prompt.py  run_cdm.py  runner.py  test_demo_notes.py  test_demo_structured.py
evidence_pipeline/: README.md  __init__.py  demo.py  demo_mimic.py
evidence_pipeline/datasets/: __init__.py  medquad.py
evidence_pipeline/evals/: product.py  safety.py
evidence_pipeline/ontology/: __init__.py  cui_mapper.py
evidence_pipeline/tests/: test_datasets.py  test_ontology.py  test_product_evals.py  test_safety_evals.py
scripts/: evidence_pipeline_demo.py  run_evals.py
src/clinical_agent/: checkpoint.py  orchestrator.py  subagents.py
src/fhir_mcp/: __init__.py  audit.py  models.py  parse.py  rag.py  server.py  store.py
tests/: test_rag.py  test_store.py
